<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/silent_block_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/silent_block_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/silent_block_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/menu_silent_block"
            app:title="@string/silent_block"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <LinearLayout
        android:id="@+id/silent_block_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/silent_block_default_dialer_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_background"
            android:paddingStart="@dimen/settings_label_start_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingEnd="@dimen/settings_label_start_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/silent_block_requires_default_dialer"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/silent_block_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed" />

        <FrameLayout
            android:id="@+id/silent_block_pages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/silent_block_list_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/silent_block_list_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingStart="@dimen/settings_label_start_margin"
                    android:paddingTop="@dimen/activity_margin"
                    android:paddingEnd="@dimen/settings_label_start_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    tools:text="Active: 2 • Silently blocked: 5" />

                <org.fossify.commons.views.MyRecyclerView
                    android:id="@+id/silent_block_entries_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/silent_block_list_summary"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/recyclerview_fab_padding"
                    android:scrollbars="none"
                    app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_silent_block_entry" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/silent_block_entries_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/silent_block_list_summary"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingTop="@dimen/big_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:paddingBottom="@dimen/big_margin"
                    android:text="@string/silent_block_list_empty"
                    android:textSize="@dimen/bigger_text_size"
                    android:textStyle="italic"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/silent_block_history_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <org.fossify.commons.views.MyRecyclerView
                    android:id="@+id/silent_block_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:scrollbars="none"
                    app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
                    tools:listitem="@layout/item_silent_block_history" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/silent_block_history_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:gravity="center"
                    android:paddingStart="@dimen/activity_margin"
                    android:paddingTop="@dimen/activity_margin"
                    android:paddingEnd="@dimen/activity_margin"
                    android:text="@string/silent_block_history_empty"
                    android:textSize="@dimen/bigger_text_size"
                    android:textStyle="italic"
                    android:visibility="gone" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/silent_block_settings_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:scrollbars="none"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/silent_block_settings_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/silent_block_enabled_holder"
                        style="@style/SettingsHolderSwitchStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.fossify.commons.views.MyMaterialSwitch
                            android:id="@+id/silent_block_enabled"
                            style="@style/SettingsSwitchStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/silent_block_mode" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/silent_block_unknown_holder"
                        style="@style/SettingsHolderSwitchStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.fossify.commons.views.MyMaterialSwitch
                            android:id="@+id/silent_block_unknown"
                            style="@style/SettingsSwitchStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/silent_block_unknown_numbers" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/silent_block_hidden_holder"
                        style="@style/SettingsHolderSwitchStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.fossify.commons.views.MyMaterialSwitch
                            android:id="@+id/silent_block_hidden"
                            style="@style/SettingsSwitchStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/silent_block_hidden_numbers" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/silent_block_hide_contacts_holder"
                        style="@style/SettingsHolderSwitchStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.fossify.commons.views.MyMaterialSwitch
                            android:id="@+id/silent_block_hide_contacts"
                            style="@style/SettingsSwitchStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/silent_block_hide_contacts" />

                    </RelativeLayout>

                    <org.fossify.commons.views.MyTextView
                        android:id="@+id/silent_block_list_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:paddingStart="@dimen/settings_label_start_margin"
                        android:paddingTop="@dimen/big_margin"
                        android:paddingEnd="@dimen/settings_label_start_margin"
                        android:text="@string/silent_block_list_hint"
                        android:textSize="@dimen/smaller_text_size" />

                    <org.fossify.commons.views.MyTextView
                        android:id="@+id/silent_block_how_it_works"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.6"
                        android:paddingStart="@dimen/settings_label_start_margin"
                        android:paddingTop="@dimen/big_margin"
                        android:paddingEnd="@dimen/settings_label_start_margin"
                        android:paddingBottom="@dimen/activity_margin"
                        android:textSize="@dimen/smaller_text_size"
                        tools:text="@string/silent_block_how_it_works" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </FrameLayout>
    </LinearLayout>

    <org.fossify.commons.views.MyFloatingActionButton
        android:id="@+id/silent_block_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/bigger_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:contentDescription="@string/silent_block_add"
        android:elevation="@dimen/medium_margin"
        android:padding="@dimen/activity_margin"
        android:src="@drawable/ic_plus_vector"
        app:backgroundTint="@color/color_primary"
        app:rippleColor="@color/pressed_item_foreground" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
